--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/png" href=”./images/higurashi_logo.png”>
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Document</title>
+
+    <title>Higurashi Theory</title>
 </head>
 <body>
     <header class="header">
